--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -336,7 +336,7 @@ body {
     border: none;
     border-radius: 15px;
     background-color: transparent; 
-    color: #9291A5; 
+    color: #615E83; 
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
